syntax = "proto3";

option csharp_namespace = "PulseApp.Protos";

package common;

message EmptyRequest {

}

message EmptyResponse {

}

message IdRequest {
	int32 id = 1;
}

message IdResponse {
	int32 id = 1;
}